--- a/09_atributos_e_metodos_estatisticos/desafio/desafio1.html
+++ b/09_atributos_e_metodos_estatisticos/desafio/desafio1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 1</title>
-    <script src="./desafio.js"></script>
+    <script src="./desafio1.js"></script>
 </head>
 
 <body>
