--- a/exercicio/inserindo_e_processando_dados_em_tabela/html/atividade.html
+++ b/exercicio/inserindo_e_processando_dados_em_tabela/html/atividade.html
@@ -7,39 +7,51 @@
     <link rel="stylesheet" href="../css/atividade.css">
     <title>Document</title>
     <script type="module" src="../js/app.js"></script>
+    <script type="module">
+        import { adicionando } from "../js/app.js";
+
+        document.getElementById("btn").addEventListener("click", adicionando);
+    </script>
 </head>
 
 <body>
 
-    <h1>Inserindo e processando dados em tabela</h1>
-
-    <form class="info" name="info">
-
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome">
-
-        <label for="data_nasc">Data de nascimento:</label>
-        <input type="date" id="data_nasc">
-
-        <label for="funcao">Funçao:</label>
-        <select name="funcao" id="funcao">
-            <option value="selecione">Selecione</option>
-            <option value="professor">Professor</option>
-            <option value="diretor">Diretor</option>
-            <option value="coordenador">Coordenador</option>
-            <option value="porteiro">Porteiro</option>
-        </select>
-
-        <input type="button" value="Inserir">
-
-    </form>
 
     <div>
 
-        <h1>Dados coletados:</h1>
+        <h1>Inserindo e processando dados em tabela</h1>
+
+        <form class="info" name="info">
+
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome">
+
+            <label for="data_nasc">Data de nascimento:</label>
+            <input type="date" id="data_nasc">
+
+            <label for="funcao">Função:</label>
+            <select name="funcao" id="funcao">
+                <option value="Selecione">Selecione</option>
+                <option value="Aluno">Aluno</option>
+                <option value="Professor">Professor</option>
+                <option value="Diretor">Diretor</option>
+                <option value="Coordenador">Coordenador</option>
+                <option value="Porteiro">Porteiro</option>
+            </select>
+
+            <input id="btn" type="button" value="Inserir">
+        </form>
+
+    </div>
+
+    <div class="tab">
+
+        <h2>Dados coletados:</h2>
         <table id="tbl-pessoas"></table>
 
     </div>
+
+
 
 </body>
 
