--- a/exercicio/inserindo_e_processando_dados_em_tabela/html/atividade.html
+++ b/exercicio/inserindo_e_processando_dados_em_tabela/html/atividade.html
@@ -16,22 +16,21 @@
 
 <body>
 
+    <h1>Inserindo e processando dados em tabela</h1>
 
-    <div>
-
-        <h1>Inserindo e processando dados em tabela</h1>
+    <div class="content-form">
 
         <form class="info" name="info">
 
             <label for="nome">Nome:</label>
-            <input type="text" id="nome">
+            <input type="text" name="nome" id="nome">
 
             <label for="data_nasc">Data de nascimento:</label>
-            <input type="date" id="data_nasc">
+            <input type="date" name="data_nasc" id="data_nasc">
 
             <label for="funcao">Função:</label>
             <select name="funcao" id="funcao">
-                <option value="Selecione">Selecione</option>
+                <option value="Selecione" >Selecione</option>
                 <option value="Aluno">Aluno</option>
                 <option value="Professor">Professor</option>
                 <option value="Diretor">Diretor</option>
@@ -44,14 +43,13 @@
 
     </div>
 
+    <h2>Dados coletados:</h2>
+
     <div class="tab">
 
-        <h2>Dados coletados:</h2>
         <table id="tbl-pessoas"></table>
 
     </div>
-
-
 
 </body>
 
