--- a/exercicio/inserindo_e_processando_dados_em_tabela/html/atividade.html
+++ b/exercicio/inserindo_e_processando_dados_em_tabela/html/atividade.html
@@ -23,14 +23,14 @@
         <form class="info" name="info">
 
             <label for="nome">Nome:</label>
-            <input type="text" name="nome" id="nome">
+            <input type="text" name="nome" id="nome" required>
 
             <label for="data_nasc">Data de nascimento:</label>
-            <input type="date" name="data_nasc" id="data_nasc">
+            <input type="date" name="data_nasc" id="data_nasc" required>
 
-            <label for="funcao">Função:</label>
-            <select name="funcao" id="funcao">
-                <option value="Selecione" >Selecione</option>
+            <label for="funcao">Funçao:</label>
+            <select name="funcao" id="funcao" required>
+                <option value="" data-default disabled selected></option>
                 <option value="Aluno">Aluno</option>
                 <option value="Professor">Professor</option>
                 <option value="Diretor">Diretor</option>
